fixed overflow for student schedule

--- a/components/dashboard/dashboard.component.css
+++ b/components/dashboard/dashboard.component.css
@@ -2,7 +2,7 @@ tbody, td, tfoot, th, thead, tr {
     padding-right: 2rem;
 }
 
-h1{
+h1 {
     color: black;
     background-color: coral;
     text-align: center;
@@ -12,10 +12,15 @@ h2{
     text-align: center;
 }
 
-div{
+div {
     position: relative;
 }
 
-#student-info{
-    height: 200px;
+#student-info {
+    height: 250px;
+}
+
+#student-courses {
+    height: inherit;
+    overflow: auto;
 }
